<resources>
    <string name="app_name">French Learning</string>
    <string name="french_learning">FRENCH LEARNING</string>
    <string name="seasons">Seasons</string>
    <string name="nature">Nature</string>
    <string name="travel">Travelling</string>
    <string name="character">Character</string>
    <string name="technique">Technique</string>
    <string name="clothes">Clothes</string>
    <string name="house">House</string>
    <string name="food">Food</string>
    <string name="person">Person</string>
    <string name="professions">Professions</string>
    <string name="school">School</string>
    <string name="animals">Animals</string>
    <string name="translate_the_word_into_french">Translate the word into french</string>
    <string name="hint">Hint</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="you_correctly_translated">You correctly translated </string>
    <string name="words_out_of">words out of</string>
    <string name="back_to_main_menu">Back</string>
    <string name="restart">Restart</string>
    <string name="answer">Answer</string>
    <string name="mistakes">mistakes</string>
    <string name="mistake">mistake</string>
    <string name="right_answer">right answer</string>

    <string name="right_answers">right answers</string>
    <string name="your_result_for_this_theme_is">Your result for this theme is</string>
    <string name="hints_used">hints used</string>
    <string name="answers_used">answers used</string>
    <string name="answer_used">answer used</string>
    <string name="hint_used">hint used</string>

    <string name="vocabulary">Vocabulary</string>
    <string name="sentence">Sentence</string>
    <string name="which_translation_is_correct">Which translation is correct</string>
    <string name="change_language">Translate to Russian</string>
    <string name="Which_level">Which level?</string>
    <string name="your_result">Result for level</string>
    <string name="you_chose">You chose</string>
    <string name="correct_answers_out_of">correct answers out of</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Sure?</string>
    <string name="message">All progress in this theme will be lost</string>
    <string name="vocab_rules">Vocabulary has 12 topics and the \"All\" section.
In each topic, you need to translate the suggested words related to this topic.\n In the \"All\" section, words from all topics are randomly selected.\n
There are buttons:\n\t\t Hint:\n\t\t\tThe translation appears, but some letters are not visible.\n
    Answer: \n\t\t\t translation appears.\n
    Check:\n\t\t\t checking the user\'s translation.\n
Next:\n\t\t\t moves to the next word.\n2 articles can be used, une and un. </string>
    <string name="sentences_rules">There is a sentence in English / Russian and 4 translation options in French, you need to choose which of the translations is correct.</string>
    <string name="vocabulary1">Vocabulary</string>
</resources>