<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon1"

    tools:context=".Finish">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/linear"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/you_correctly_translated"
            android:textSize="50sp"

            android:text="@string/you_correctly_translated"
            tools:ignore="MissingConstraints">


        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"


            android:id="@+id/score"
            android:textColor="@color/green"
            tools:ignore="MissingConstraints">


        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textSize="50sp"

            android:id="@+id/words_out_of"
            android:text="@string/words_out_of"
            tools:ignore="MissingConstraints">


        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score1"
            android:textSize="50sp"


            android:textColor="@color/green"
            tools:ignore="MissingConstraints">


        </TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/linear"
        android:layout_height="0sp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/linear1"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/answers"
                android:textSize="50sp"
                android:textColor="@color/red"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/answers_used"
                android:id="@+id/answer"
                android:textSize="50sp"

                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"

            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/hints"
                android:textSize="50sp"
                android:textColor="@color/red"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/hints_used"
                android:id="@+id/hint"
                android:textSize="50sp"

                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"

            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mistakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="50sp"
                >

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mistake"
                android:text="@string/mistakes"

                android:textSize="50sp"
                >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"

            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/right_answers"
                android:textColor="@color/green"
                android:textSize="50sp"

                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/right_answers"
                android:textSize="50sp"
                android:id="@+id/right_answer"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"

            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text=""

                android:textColor="@color/red"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/your_result"
                android:text="@string/your_result_for_this_theme_is"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/stars"
                android:textColor="@color/orange"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tokos"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/view1"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        android:layout_height="0sp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:text="@string/back_to_main_menu"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            android:maxLines="1"
            android:id="@+id/back"
            android:backgroundTint="@color/red"
            android:layout_height="wrap_content">

        </Button>
        <Button
            android:layout_width="match_parent"
            android:backgroundTint="@color/green"
            android:layout_weight="1"
            android:id="@+id/restart"
            app:autoSizeTextType="uniform"

            android:text="@string/restart"
            android:layout_height="wrap_content">

        </Button>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>